{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 31,
  "lineage": "4abfc4e4-5064-c5a1-16a5-199c4506f14e",
  "resources": [
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_eip",
      "name": "kang_web_eip",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.11",
            "association_id": "eipassoc-058154111d0a031aa",
            "domain": "vpc",
            "id": "eipalloc-057c5a6b4b4e3e983",
            "instance": "i-0931822ae9e34609d",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0428e642315f265df",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-3-36-201-102.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.201.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.stage.aws_instance.kang_weba",
            "module.stage.aws_internet_gateway.kang_ig",
            "module.stage.aws_security_group.kang_websg",
            "module.stage.aws_subnet.kang_pub",
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb_ip_a",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05ce6397d749db681",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-238-88.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.238.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kang_weba",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4a9ad2eb120e054",
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:instance/i-0931822ae9e34609d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0931822ae9e34609d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "var.key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0428e642315f265df",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b64624f48f1614b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0513e8b2a3fc3d637",
            "tags": {
              "Name": "kang-web"
            },
            "tags_all": {
              "Name": "kang-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0842a9d5b30056430"
            ]
          },
          "dependencies": [
            "module.stage.aws_security_group.kang_websg",
            "module.stage.aws_subnet.kang_pub",
            "module.stage.aws_vpc.kang_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kang_ig",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:internet-gateway/igw-0e5f496925714f259",
            "id": "igw-0e5f496925714f259",
            "owner_id": "560971842042",
            "tags": {
              "Name": "kang-ig"
            },
            "tags_all": {
              "Name": "kang-ig"
            },
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "dependencies": [
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_lb",
      "name": "kang_lb",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:560971842042:loadbalancer/app/kang-alb/b2cccdc22f230d18",
            "arn_suffix": "app/kang-alb/b2cccdc22f230d18",
            "dns_name": "kang-alb-1273557987.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:560971842042:loadbalancer/app/kang-alb/b2cccdc22f230d18",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kang-alb",
            "security_groups": [
              "sg-0842a9d5b30056430"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0513e8b2a3fc3d637"
              },
              {
                "subnet_id": "subnet-0b919eb7658c1cf12"
              }
            ],
            "subnets": [
              "subnet-0513e8b2a3fc3d637",
              "subnet-0b919eb7658c1cf12"
            ],
            "tags": {
              "Name": "kang-alb"
            },
            "tags_all": {
              "Name": "kang-alb"
            },
            "vpc_id": "vpc-0e2078131b2307c8a",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.stage.aws_security_group.kang_websg",
            "module.stage.aws_subnet.kang_pub",
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kang_lblist",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:560971842042:listener/app/kang-alb/b2cccdc22f230d18/fe3a353f4b1dd92f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:560971842042:targetgroup/kang-lbtg/952be0d38ffee682",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:560971842042:listener/app/kang-alb/b2cccdc22f230d18/fe3a353f4b1dd92f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:560971842042:loadbalancer/app/kang-alb/b2cccdc22f230d18",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stage.aws_lb.kang_lb",
            "module.stage.aws_lb_target_group.kang_lbtg",
            "module.stage.aws_security_group.kang_websg",
            "module.stage.aws_subnet.kang_pub",
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kang_lbtg",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:560971842042:targetgroup/kang-lbtg/952be0d38ffee682",
            "arn_suffix": "targetgroup/kang-lbtg/952be0d38ffee682",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:560971842042:targetgroup/kang-lbtg/952be0d38ffee682",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "kang-lbtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "dependencies": [
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "kang_lbtg_att",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:560971842042:targetgroup/kang-lbtg/952be0d38ffee682-20211102012015532000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:560971842042:targetgroup/kang-lbtg/952be0d38ffee682",
            "target_id": "i-0931822ae9e34609d"
          },
          "dependencies": [
            "module.stage.aws_instance.kang_weba",
            "module.stage.aws_lb_target_group.kang_lbtg",
            "module.stage.aws_security_group.kang_websg",
            "module.stage.aws_subnet.kang_pub",
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "kang_nga",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ce6397d749db681",
            "connectivity_type": "public",
            "id": "nat-0db69d57b132a74f7",
            "network_interface_id": "eni-0b72e98c8dd3b2cb0",
            "private_ip": "10.0.0.187",
            "public_ip": "3.36.238.88",
            "subnet_id": "subnet-0513e8b2a3fc3d637",
            "tags": {
              "Name": "kang-nga-a"
            },
            "tags_all": {
              "Name": "kang-nga-a"
            }
          },
          "dependencies": [
            "module.stage.aws_eip.lb_ip_a",
            "module.stage.aws_subnet.kang_pub",
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kang_ngart",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:route-table/rtb-0b19b110be60180f2",
            "id": "rtb-0b19b110be60180f2",
            "owner_id": "560971842042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0db69d57b132a74f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kang-nga-rta"
            },
            "tags_all": {
              "Name": "kang-nga-rta"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stage.aws_eip.lb_ip_a",
            "module.stage.aws_nat_gateway.kang_nga",
            "module.stage.aws_subnet.kang_pub",
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kang_rt",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:route-table/rtb-00845bcabed256fbf",
            "id": "rtb-00845bcabed256fbf",
            "owner_id": "560971842042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5f496925714f259",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kang-rt"
            },
            "tags_all": {
              "Name": "kang-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stage.aws_internet_gateway.kang_ig",
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kang_ngartas",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0988422227f158a97",
            "route_table_id": "rtb-0b19b110be60180f2",
            "subnet_id": "subnet-08bc460307ce3fdd2"
          },
          "dependencies": [
            "module.stage.aws_eip.lb_ip_a",
            "module.stage.aws_nat_gateway.kang_nga",
            "module.stage.aws_route_table.kang_ngart",
            "module.stage.aws_subnet.kang_pri",
            "module.stage.aws_subnet.kang_pub",
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kang_rtas_a",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9193128c02847dc",
            "route_table_id": "rtb-00845bcabed256fbf",
            "subnet_id": "subnet-0513e8b2a3fc3d637"
          },
          "dependencies": [
            "module.stage.aws_internet_gateway.kang_ig",
            "module.stage.aws_route_table.kang_rt",
            "module.stage.aws_subnet.kang_pub",
            "module.stage.aws_vpc.kang_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3569cca28e10352",
            "route_table_id": "rtb-00845bcabed256fbf",
            "subnet_id": "subnet-0b919eb7658c1cf12"
          },
          "dependencies": [
            "module.stage.aws_internet_gateway.kang_ig",
            "module.stage.aws_route_table.kang_rt",
            "module.stage.aws_subnet.kang_pub",
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kang_websg",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:security-group/sg-0842a9d5b30056430",
            "description": "http-ssh-icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0842a9d5b30056430",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow-WEB",
            "name_prefix": "",
            "owner_id": "560971842042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kang-sg"
            },
            "tags_all": {
              "Name": "kang-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stage.aws_vpc.kang_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kang_pri",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-08bc460307ce3fdd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08bc460307ce3fdd2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "tags": {
              "Name": "pri-a"
            },
            "tags_all": {
              "Name": "pri-a"
            },
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "dependencies": [
            "module.stage.aws_vpc.kang_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-0b2fa5d92322057c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b2fa5d92322057c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "tags": {
              "Name": "pri-c"
            },
            "tags_all": {
              "Name": "pri-c"
            },
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "dependencies": [
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kang_pridb",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-04f1879e324166800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-04f1879e324166800",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "tags": {
              "Name": "pridb-a"
            },
            "tags_all": {
              "Name": "pridb-a"
            },
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "dependencies": [
            "module.stage.aws_vpc.kang_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-0bda2b73f7ac5fb65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0bda2b73f7ac5fb65",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "tags": {
              "Name": "pridb-c"
            },
            "tags_all": {
              "Name": "pridb-c"
            },
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "dependencies": [
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kang_pub",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-0513e8b2a3fc3d637",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0513e8b2a3fc3d637",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "tags": {
              "Name": "pub-a"
            },
            "tags_all": {
              "Name": "pub-a"
            },
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "dependencies": [
            "module.stage.aws_vpc.kang_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:subnet/subnet-0b919eb7658c1cf12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b919eb7658c1cf12",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560971842042",
            "tags": {
              "Name": "pub-c"
            },
            "tags_all": {
              "Name": "pub-c"
            },
            "vpc_id": "vpc-0e2078131b2307c8a"
          },
          "dependencies": [
            "module.stage.aws_vpc.kang_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stage",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kang_vpc",
      "provider": "module.stage.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:560971842042:vpc/vpc-0e2078131b2307c8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f344c9ea3aa24d7",
            "default_route_table_id": "rtb-0a5f192930338faef",
            "default_security_group_id": "sg-01f20a283bd9ea335",
            "dhcp_options_id": "dopt-032ab9ef01b1f7333",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e2078131b2307c8a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a5f192930338faef",
            "owner_id": "560971842042",
            "tags": {
              "Name": "kang-vpc"
            },
            "tags_all": {
              "Name": "kang-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}